```mermaid
erDiagram
    fait_offres ||--o{ dim_source : "id_source"
    fait_offres ||--o{ dim_lieu : "id_lieu"
    fait_offres ||--o{ dim_entreprise : "id_entreprise"
    fait_offres ||--o{ dim_contrat : "id_contrat"
    fait_offres ||--o{ dim_metier : "id_metier"
    fait_offres ||--o{ dim_temps : "id_temps_publication"
    fait_offres ||--o{ dim_experience : "id_experience"
    fait_offres ||--o{ dim_qualification : "id_qualification"
    fait_offres ||--o{ offre_competence : "id_offre"
    fait_offres ||--o{ offre_formation : "id_offre"
    fait_offres ||--o{ offre_langue : "id_offre"
    offre_competence ||--o{ dim_competence : "id_competence"

    fait_offres {
        int id_offre PK
        varchar id_offre_source
        int id_source FK
        int id_lieu FK
        int id_entreprise FK
        int id_contrat FK
        int id_metier FK
        int id_temps_publication FK
        int id_experience FK
        varchar titre
        text description
        real salaire_min
        real salaire_max
        varchar salaire_commentaire
        boolean alternance
        int nombre_postes
        datetime date_creation
        varchar url_offre
        boolean actif
    }

    dim_source {
        int id_source PK
        varchar nom_source
        varchar url_base
        varchar type_source
    }

    dim_lieu {
        int id_lieu PK
        varchar code_postal
        varchar code_commune
        varchar commune
        varchar code_departement
        varchar departement
        varchar code_region
        varchar region
        real latitude
        real longitude
    }

    dim_entreprise {
        int id_entreprise PK
        varchar nom
        text description
        varchar logo_url
        varchar secteur_activite
        varchar code_naf
    }

    dim_contrat {
        int id_contrat PK
        varchar code_contrat
        varchar libelle_contrat
        varchar code_nature
        varchar libelle_nature
    }

    dim_metier {
        int id_metier PK
        varchar code_rome
        varchar libelle_rome
        varchar code_domaine
        varchar libelle_domaine
    }

    dim_temps {
        int id_temps PK
        date date_complete
        int jour
        int mois
        int annee
        int trimestre
        int semaine
        varchar nom_jour
        varchar nom_mois
    }

    dim_experience {
        int id_experience PK
        varchar code_experience
        varchar libelle_experience
    }

    dim_qualification {
        int id_qualification PK
        varchar code_qualification
        varchar libelle_qualification
    }

    dim_competence {
        int id_competence PK
        varchar code_competence
        varchar libelle_competence
        varchar type_competence
    }

    offre_competence {
        int id_offre FK
        int id_competence FK
        varchar exigence
    }

    offre_formation {
        int id_offre FK
        varchar code_formation
        varchar libelle_formation
        varchar niveau_requis
    }

    offre_langue {
        int id_offre FK
        varchar code_langue
        varchar libelle_langue
        varchar niveau
    }
```
